...
            android:layout_marginBottom="140dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentStart="true"
            android:visibility="gone"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/reader_manga_toolbar_reader_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/reader_title_margin_negative"
            android:layout_marginEnd="@dimen/reader_title_margin_negative"
            android:background="@android:color/transparent"
            android:theme="@style/MainToolbarContentTheme"
...
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="80dp">

            <LinearLayout
                android:id="@+id/reader_manga_bottom_progress_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/reader_progress_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/reader_manga_bottom_progress_title"
                    style="@style/TextTitle.PageNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_small_size" />

                <!-- Not use style, because progress color from drawable -->
                <br.com.fenix.bilingualreader.view.components.DottedSeekBar
                    android:id="@+id/reader_manga_bottom_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="2dp"
                    android:minHeight="2dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
...
            android:layout_height="@dimen/reader_change_comic_size"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="85dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reader_manga_nav_previous_file"
                style="@style/Button.ReaderButtons.Navigator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/reading_manga_button_previous_file"
                app:icon="@drawable/ico_animated_manga_before"
                app:iconGravity="textStart"
...
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="85dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reader_manga_nav_next_file"
                style="@style/Button.ReaderButtons.Navigator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/reading_manga_button_next_file"
                app:icon="@drawable/ico_animated_manga_next"
                app:iconGravity="textStart"
...
            android:id="@+id/reader_manga_blur_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/reader_manga_toolbar_reader_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/app_reader_toolbar_background_inverse"
                android:gravity="center"
                android:orientation="horizontal">

...
                    android:minHeight="@dimen/popup_reader_button_min_height"
                    app:iconSize="30dp"
                    app:iconTint="@null"
                    app:icon="@drawable/ico_animated_chapters"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reader_manga_btn_menu_annotations"
                    style="@style/Button.ReaderButtons"
                    android:layout_width="@dimen/reader_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/reading_manga_button_menu_chapters"
                    android:insetLeft="11dp"
...
                    app:iconSize="30dp"
                    app:iconTint="@null"
                    app:icon="@drawable/ico_animated_manga_annotations" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reader_manga_btn_popup_color"
                    style="@style/Button.ReaderButtons"
                    android:layout_width="@dimen/reader_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/reading_manga_button_color"
                    android:minHeight="@dimen/popup_reader_button_min_height"
...
