...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/popup_background_size"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/popup_manga_translate_tab"
                    style="@style/PopupTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMode="fixed"
                    app:tabPaddingBottom="0dp"
...
                    app:tabPaddingTop="0dp">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/popup_manga_translate_tab_item_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_reading_manga_tab_item_subtitle" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/popup_manga_translate_tab_item_vocabulary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_reading_manga_tab_item_subtitle_vocabulary" />
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/popup_background_size"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/popup_manga_configurations_tab"
                    style="@style/PopupTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMode="fixed"
                    app:tabPaddingBottom="0dp"
...
                        android:text="@string/popup_reading_manga_tab_item_configuration_brightness" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/popup_manga_configurations_tab_item_bookmarks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_reading_manga_tab_item_configuration_bookmarks" />

                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/popup_manga_configurations_view_pager"
                    android:layout_width="match_parent"
...
