...
            android:layout_marginBottom="1dp"
            android:minHeight="@dimen/popup_reader_button_min_height"
            android:tooltipText="@string/popup_reading_manga_button_find"
            app:icon="@drawable/ico_animated_text_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/popup_manga_subtitle_draw_text"
            app:layout_constraintRight_toLeftOf="@+id/popup_manga_subtitle_before_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_manga_subtitle_before_text"
            style="@style/Button.RoundedIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
            android:layout_height="@dimen/popup_reader_button_width"
...
            android:layout_marginBottom="1dp"
            android:minHeight="@dimen/popup_reader_button_min_height"
            android:tooltipText="@string/popup_reading_manga_button_before"
            app:icon="@drawable/ico_animated_text_before"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/popup_manga_subtitle_refresh"
            app:layout_constraintRight_toLeftOf="@+id/popup_manga_subtitle_next_text"
            app:layout_constraintTop_toBottomOf="@+id/popup_manga_subtitle_page_selected" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_manga_subtitle_next_text"
            style="@style/Button.RoundedIconOnly"
            android:layout_width="@dimen/popup_reader_button_width"
...
