...
        </menu>
    </item>

    <item
        android:icon="@drawable/ico_ocr_file_linked"
        android:orderInCategory="106"
        android:title="@string/menu_manga_reading_ocr_file_linked"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_item_reader_manga_popup_subtitle"
                android:icon="@drawable/ico_change_language"
                android:orderInCategory="102"
                android:title="@string/menu_manga_reading_subtitle"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menu_item_reader_manga_file_link"
                android:icon="@drawable/ico_file_link"
                android:orderInCategory="103"
...
